# wax

./: .diff_review  .gitignore  Cargo.toml  INTEGRATION_REPORT.md  INTEGRATION_SUMMARY.md  LINUX_SUPPORT.md  PHASE2_GUIDE.md  README.md  benchmark.sh  clean_debug.py  fix_redundant.py  fix_redundant2.py  install.ps1  modify_diff.patch  plan.md  test_integration.sh  test_phase2.sh  test_regex.rs  todo.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.poc/cache/: build.hash
docs/: API.md  ARCHITECTURE.md  CLI.md  DEVELOPMENT.md  IMPLEMENTATION.md  PHASE2_SUMMARY.md  PRD.md  TROUBLESHOOTING.md  comparison.md
src/: api.rs  bottle.rs  builder.rs  cache.rs  cask.rs  catalog_match.rs  chocolatey.rs  deps.rs  digest.rs  discovery.rs  ecosystem_install.rs  error.rs  formula_parser.rs  http_client.rs  install.rs  lockfile.rs  main.rs  package_spec.rs  platform_catalog.rs  remote_search.rs  scoop.rs  signal.rs  sudo.rs  system_pm.rs  tap.rs  timing.rs  ui.rs  version.rs  windows_state.rs  winget_install.rs
src/commands/: audit.rs  bundle.rs  completions.rs  doctor.rs  info.rs  install.rs  leaves.rs  list.rs  lock.rs  mod.rs  outdated.rs  refresh.rs  reinstall.rs  search.rs  self_update.rs  services.rs  source.rs  sync.rs  tap.rs  uninstall.rs  update.rs  upgrade.rs  version_install.rs
tests/: cli.rs
tests/fixtures/: scoop_agent_browser.json
