[package]
name = "wax"
version = "0.1.0"
edition = "2021"
authors = ["Wax Contributors"]
description = "Fast Homebrew-compatible package manager"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

indicatif = "0.17"
console = "0.15"
inquire = "0.7"

anyhow = "1"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

tar = "0.4"
flate2 = "1"
sha2 = "0.10"
tempfile = "3"

directories = "5"
dunce = "1"
