[package]
name = "waxpkg"
version = "0.19.3"
edition = "2021"
authors = ["Wax Contributors"]
description = "Fast Homebrew-compatible package manager"
license = "MIT"
repository = "https://github.com/plyght/wax"
homepage = "https://github.com/plyght/wax"
documentation = "https://docs.rs/waxpkg"
readme = "README.md"
keywords = ["package-manager", "homebrew", "macos", "cli", "installer"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "build/*",
    ".poc/*",
    "assets/*",
    "docs/*",
    "benchmark.sh",
    ".github/*",
    "tests/*",
]

[[bin]]
name = "wax"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
clap_complete = "4"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "sync", "time", "io-util"] }
reqwest = { version = "0.13", features = ["json", "stream", "gzip", "brotli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

indicatif = "0.18"
console = "0.16"
inquire = "0.9"

thiserror = "2"

tracing = "0.1"
tracing-subscriber = "0.3"

tar = "0.4"
flate2 = "1"
sha2 = "0.10"
tempfile = "3"
regex = "1"
libc = "0.2"
nix = { version = "0.29", features = ["user", "process"] }

dunce = "1"
ctrlc = "3"
shellexpand = "3"
urlencoding = "2.1.3"

[target.'cfg(windows)'.dependencies]
zip = "2"
serde_yaml = "0.9"
